# -weather-uk-tui

./: README.md  setup.cfg
src/weather_uk/: __main__.py  config.py  ensure.py  serialisers.py
src/weather_uk/adapters/: weather_api.py
src/weather_uk/app/: app.py  weather-uk.css
src/weather_uk/app/screens/: forecast.py  locations.py  welcome.py
src/weather_uk/app/widgets/: forecast_day.py  forecast_labels.py  locations.py  welcome.py
src/weather_uk/data/models/: __init__.py  forecast.py  location.py  weather.py
src/weather_uk/domain/: authentication.py  forecast.py  locations.py  serialisers.py  weather_api_client.py
src/weather_uk/forecasts/: models.py  services.py
src/weather_uk/locations/: model.py  services.py
src/weather_uk/ports/: weather_api.py
tests/: test_config.py  test_met_office_api.py
tests/data/: 310069-3hourly  sitelist
