[metadata]
name = weather-uk
version = attr: weather_uk.__version__
author = TomJGooding
description = Check UK weather forecasts from your terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/weather-uk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
install_requires =
    requests
    textual
    textual-autocomplete
    platformdirs

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    types-requests
    textual[dev]
